Bug 706090 - stext page wrong char quad, for Type 3 font
Summary: stext page wrong char quad, for Type 3 font
Status: RESOLVED FIXED
Alias: None
Product: MuPDF
Classification: Unclassified
Component: mupdf (show other bugs)
Version: master
Hardware: PC Windows 10
: P4 normal
Assignee: MuPDF bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-11-19 21:02 UTC by Jorj
Modified: 2022-12-07 17:45 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
example pdf, reproducer C file, execution log (1.03 MB, application/x-zip-compressed)
2022-11-19 21:02 UTC, Jorj
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jorj 2022-11-19 21:02:57 UTC
Created attachment 23498 [details]
example pdf, reproducer C file, execution log

Wrong ascender / descender values in some Type 3 font.
Leading to wrong ch->quads in stext pages.
ch->origin values are correct.
Comment 1 Jorj 2022-11-19 21:14:49 UTC
This relates back to issue #2048 in PyMuPDF.
Comment 2 Jorj 2022-11-20 08:34:35 UTC
In MuPDF v1.19.0, the respective font ('T3TXT.SHXHorz1_753342N0') had been handled correctly and delivered reasonable ascender / descender values (0.97, -0.22).
Comment 3 Robin Watts 2022-12-07 17:45:00 UTC
Tor fixed this in:

commit 8ed62a130646b518eaaf3603d49bd008f29b9b54
Author: Tor Andersson <tor.andersson@artifex.com>
Date:   Wed Dec 7 14:23:37 2022 +0100

    Bug 706090: Fix calculation of invalid Type3 font bbox.

    Only take into account glyphs that have a definition.

Thanks for the report.