Bug 706090: Fix calculation of invalid Type3 font bbox.

Only take into account glyphs that have a definition.